--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -15,6 +15,9 @@
 
     <div class="container">
 
+    <a href="/">Anasayfa</a>
+    <hr><br>
+
         {% block body %}
 
         {% endblock body %}
