--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,7 +19,9 @@
 </h5>
 
 <p>Seni takip etmeyenleri görmek için <a href="/unfollowers">tıkla!</a></p>
-<p>Favorilerini görmek için <a href="/favorites">tıkla!</a></p>
+<p>Favorilerini silmek için <a href="/favorites">tıkla!</a></p>
+<p>Tweetlerini silmek için <a href="/delete_tweets">tıkla!</a></p>
+<p><b>test için</b> <a href="/test">tıkla!</a></p>
 
 <a href="/logout/">Çıkış yap!</a>
 
