--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,31 +2,41 @@
 
 {% block body %}
 
-
-<h4>
-    <a href="/register">Kayıt ol</a>
-</h4>
-<h4>
-    <a href="/login">Giriş</a>
-</h4>
-<h4>
-    <a href="/auth">Twitter Connect mk</a>
-</h4>
-
 {% if session['token'] %}
 <h5>
-    Hoşgeldin {{ session['email'] }} Token bilgilerin {{ session['token'] }}
+    Hoşgeldin {{ username }}
 </h5>
 
-<p>Seni takip etmeyenleri görmek için <a href="/unfollowers">tıkla!</a></p>
+
+
+
+<div id="content">
+
+</div>
+
+<p>Seni takip etmeyenleri görmek için <input class="btn btn-primary" type="submit" value="Submit"
+        onclick="unfollowers()"></p>
+
 <p>Favorilerini silmek için <a href="/favorites">tıkla!</a></p>
 <p>Tweetlerini silmek için <a href="/delete_tweets">tıkla!</a></p>
 <p><b>test için</b> <a href="/test">tıkla!</a></p>
 
-<a href="/logout/">Çıkış yap!</a>
-
 {% endif %}
 
 
+<script>
+    function unfollowers() {
+        const div = document.createElement('div');
 
+        div.className = 'progress';
+
+        div.innerHTML = `
+                <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+                    aria-valuemax="100" style="width: 0%">
+                    <span class="progress-bar-label">0%</span>
+                </div>`;
+        document.getElementById('content').appendChild(div);
+        // window.location.href = "/unfollowers";
+    }
+</script>
 {% endblock body %}
