--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -43,7 +43,7 @@
                 </li> -->
                 {% if session['token'] %}
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
+                    <a class="nav-link" href="/logout/">Logout</a>
                 </li>
                 {% else %}
                 <li class="nav-item">
