--- a/src/templates/features/test.html
+++ b/src/templates/features/test.html
@@ -5,7 +5,7 @@
     <ol>
         {% for fav in favs_text %}
             <li>
-                {{ tweet.text }}
+                {{ fav.text }}
             </li>
         {% endfor %}
     </ol>
