--- a/src/templates/features/favorites.html
+++ b/src/templates/features/favorites.html
@@ -7,10 +7,11 @@
 <hr>
 <p>Fav sayın: {{ me.favourites_count }}</p>
 
-<p>Tweet sayın: {{ me.statuses_count }}</p>
 <br>
 
-
+<form method="POST">
+    <button type="submit" class="btn btn-danger">Delete all favs!</button>
+</form>
 
 
 
