--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,15 +8,13 @@
 </h5>
 
 
-
-
 <div id="content">
 
 </div>
 
-<p>Seni takip etmeyenleri görmek için <input class="btn btn-primary" type="submit" value="Submit"
+<p>progress bar test <input class="btn btn-primary" type="submit" value="Submit"
         onclick="unfollowers()"></p>
-
+<p>Seni takip etmeyenleri görmek için <a href="/unfollowers">tıkla</a></p>
 <p>Favorilerini silmek için <a href="/favorites">tıkla!</a></p>
 <p>Tweetlerini silmek için <a href="/delete_tweets">tıkla!</a></p>
 <p><b>test için</b> <a href="/test">tıkla!</a></p>
